# INF2004-T3

./: (For receiver) lwipopts.h  CMakeLists.txt  README.md  arp_spoof.c  connect.py  etharp.c  etharp.h  lwipopts.h  pico_freertos_arp_spoof.c  picow_access_point.c
Analyze/: analyze.py  packets.txt
Capture_Traffic/Nexmon/: Sample Network Traffic.txt  picow_monitor_mode.uf2
Capture_Traffic/PicoW_Access_Point/: picow_access_point.c
Pico_ARP_Spoofer/: Spoofer_README.txt  lwipopts.h  pico_freertos_arp_spoof.c
Pico_Receiver/: CMakeLists.txt  Receiver_README.txt  ip.c  ip.h  pico_freertos_arp_receiver.c
analysis/: CMakeLists.txt  analysis.c
no-OS-FatFS-SD-SPI-RPi-Pico/example/: dev_brd.hw_config.c  exp_mod_A.hw_config.c  hw_config.c
project/: CMakeLists.txt  project.c
